[project]
name = "TdxQuant"
version = "0.1.0"
description = "通达信量化平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtrader>=1.9.78.123",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "vectorbt>=0.28.2",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tdxdata_test", "tqcenter"]
